# beetkeeper

./: .actrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  BUILD  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  cog.toml  docker-entrypoint.sh  mkdocs.yml  pants.ci.toml  pants.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release_notes_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report_issue_template.md  1-bug_report_issue_template.yaml  2-feature_request_template.md  2-feature_request_template.yaml
.github/workflows/: build-and-test.yml  docs.yml  pr-title.yml  publish.yml  release.yml
0.2/: 404.html  index.html  sitemap.xml
0.2/configuration/: index.html
0.2/contributor_docs/: index.html
0.2/installation/: index.html
0.2/public_api_reference/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  sitemap.xml
0.3/configuration/: index.html
0.3/contributor_docs/: index.html
0.3/installation/: index.html
0.3/public_api_reference/: index.html  openapi.json
0.4/: 404.html  index.html  sitemap.xml
0.4/configuration/: index.html
0.4/contributor_docs/: index.html
0.4/installation/: index.html
0.4/public_api_reference/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  sitemap.xml
0.5/configuration/: index.html
0.5/contributor_docs/: index.html
0.6/: 404.html  index.html  sitemap.xml
build_scripts/: BUILD  docs-smoke-test.sh  dump_openapi.py  export_openapi.py  lock-deps.sh  pants-validate.sh  pants_macros.py  run-test-server.sh  uv-lscr-hack.sh
deploy/: README.md  beetkeeper.docker.yaml  beets-config.yaml  config.yaml
docs/: BUILD  configuration.md  index.md  installation.md  openapi.json  overview.md
docs_overrides/: main.html
hooks/: BUILD  actionlint.sh  bandit.sh  base-image-version-sync.sh  mypy.sh  ruff.sh  uv-lockfile-check.sh  version-sync.sh
src/: BUILD
src/beetsplug/: BUILD  README.md  pyproject.toml
src/beetsplug/beetkeeper_plugin/: BUILD  __init__.py  _version.py  beetkeeper_plugin.py
src/beetsplug/plugin_tests/: BUILD  conftest.py  test_client.py  test_plugin.py
src/beetsplug/tests/: plugin_tests.py
src/beetsplug/tests/integration_tests/: BUILD
src/python/: BUILD  README.md  pyproject.toml
src/python/beetkeeper/: BUILD  __init__.py  _version.py  constants.py  main.py
src/python/beetkeeper/_cli_utils/: cli_state.py
src/python/beetkeeper/api/: BUILD  __init__.py  constants.py  dependencies.py  fastapi_app.py  jinja_driver.py
src/python/beetkeeper/api/adapters/: __init__.py  events_adapters.py
src/python/beetkeeper/api/api_models/: __init__.py  auth_api_models.py  common_api_models.py  events_api_models.py  import_api_models.py
src/python/beetkeeper/api/api_routes/: __init__.py  auth_router.py  config_router.py  events_router.py  files_router.py  health_router.py  import_router.py  query_router.py
src/python/beetkeeper/api/routes/: __init__.py  config_router.py  files_router.py  import_router.py  query_router.py
src/python/beetkeeper/api/security/: __init__.py  auth_sessions.py  middleware.py
src/python/beetkeeper/api/static/: BUILD
src/python/beetkeeper/api/static/css/: BUILD  classless.css
src/python/beetkeeper/api/static/html_templates/: BUILD  base_template.html  base_template.html.tpl
src/python/beetkeeper/api/static/html_templates/example_templates/: BUILD  example_full_page.html
src/python/beetkeeper/api/static/html_templates/fragment_templates/: event_fragment.html  import_job.html  import_job_list.html  path_suggestions.html  search_fields.html  search_results.html  search_stats.html
src/python/beetkeeper/api/static/html_templates/page_templates/: events_page.html  import_page.html  login_page.html  main_page.html  search_page.html
src/python/beetkeeper/api/static/html_templates/query_templates/: BUILD  search_form.html.tpl
src/python/beetkeeper/api/static/img/: BUILD
src/python/beetkeeper/api/static/js/: BUILD
src/python/beetkeeper/api/ui_routes/: __init__.py  auth_ui_router.py  events_ui_fragments_router.py  example_ui_router.py  import_ui_fragments_router.py  pages_ui_router.py  search_page.py  search_ui_fragments_router.py
src/python/beetkeeper/core/: __init__.py  beet_commands.py  import_jobs.py  import_store.py  import_worker.py  library.py
src/python/beetkeeper/db/: BUILD  README.md  __init__.py  alembic.ini  migrations.py  models.py  session.py
src/python/beetkeeper/db/alembic/: BUILD  __init__.py  env.py  script.py.mako
src/python/beetkeeper/db/alembic/versions/: 7f3051110f7f_initial_event_tables.py  __init__.py  bcdd3073515d_import_job_persistence_tables.py  c7a2f4e1b9d0_import_job_output_column.py  d4e8a2c6b1f3_auth_session_table.py  e2b9f4c1a307_import_job_quiet_column.py  f5d81c9a4b26_import_job_settings_columns.py
src/python/beetkeeper/settings/: __init__.py  demo_beets_config.yaml  demo_user_config.yaml  user_config.py
src/python/tests/: BUILD  conftest.py  tests_entrypoint.sh
src/python/tests/api_tests/: BUILD  conftest.py  test_auth_routes.py  test_auth_ui.py  test_candidate_table.py  test_events_routes.py  test_events_ui_fragments.py  test_import_api_models.py  test_import_routes.py  test_import_ui_fragments.py  test_jinja_driver.py  test_query_routes.py  test_search_ui.py
src/python/tests/core_tests/: test_duplicate_resolution.py  test_failed_plugins_warning.py  test_import_diff.py  test_import_event_collection.py  test_import_worker_lifecycle.py  test_import_worker_settings.py  test_library_modify.py  test_metadata_source_warning.py
src/python/tests/db_tests/: BUILD  test_alembic_and_models_synced.py  test_db_models.py  test_import_store.py  test_session_config.py
src/python/tests/db_tests/alembic_tests/: test_alembic_scripts.py  test_startup_upgrade.py
src/python/tests/integration_tests/: BUILD  conftest.py  test_import_api_integration.py  test_query_api_integration.py
src/python/tests/settings_tests/: test_user_config.py
src/rust/: Cargo.toml  README.md
src/rust/src/: main.rs
(+106 files in other folders)
