# The distribution's build-system/`[project]` config lives in `src/python/pyproject.toml` to avoid Pants'
# `python_distribution` metadata injection; see the comment there.
[dependency-groups]
app_image = ["beetkeeper @ file:///app/src/python/beetkeeper.whl"]
dev = [
  "bandit>=1.9",
  "fastapi[standard]==0.138.0",
  "ipython>=9.3.0",
  "mypy>=2.1.0",
  "pytest>=9.1",
  "pytest-mock>=3.15.1",
  "pytest-socket",
  "pytest-xdist",
  "ruff>=0.15.8",
  "ruamel-yaml>=0.19.1",
  "tomlkit",
]

[tool.uv]
# Constrains only how uv resolves the shared lockfile, keeping both workspace members' `beets` in lockstep;
# the wheels' actual `beets` deps come from each member's `[project]`.
# When bumping this, the Docker base image must be bumped as well.
constraint-dependencies = ["beets==2.12.0"]

# Members must be registered here or uv (which only reads this root file) can't see them and `uv lock` fails.
[tool.uv.workspace]
members = ["src/python", "src/beetsplug"]

[tool.uv.sources]
beetkeeper = { workspace = true }
beetkeeper_plugin = { workspace = true }

[tool.ruff]
target-version = "py314"
src = ["src/python", "src/beetsplug"]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 120
indent-width = 4


[tool.ruff.lint]
exclude = ["build_scripts/**/*.py", "src/python/tests/**/*.py"]
select = ["E", "F", "UP", "B", "SIM", "I"]
extend-select = [
  "ASYNC",
  "B006",
  "B007",
  "B012",
  "B017",
  "B019",
  "B028",
  "D101",
  "D107",
  "D417",
  "D419",
  "LOG",
  "FAST",
  "PLW0603",
  "PT",
  "PYI045",
  "PT024",
  "PLE1142",
  "PLE1700",
  "RUF006",
  "RUF008",
  "RUF009",
  "RUF012",
  "RUF015",
  "RUF018",
  "RUF022",
  "RUF024",
  "RUF032",
  "RUF033",
  "RUF049",
  "RUF100",
  "RUF101",
  "RUF200",
  "TC",
  "TID25",
  "TRY002",
  "UP",
]
# Ignore rules that conflict with the ruff formatter (https://stackoverflow.com/a/77796620).
ignore = [
  "COM812",
  "COM819",
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "E203",
  "E501",
  "PT003",
  "PT019",
  "PT022",
  "TC003",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]


[tool.ruff.lint.per-file-ignores]
# TC off: runtime-needed type hints like `fastapi.Depends` must not move under TYPE_CHECKING.
"src/python/beetkeeper/api/**/*.py" = ["TC", "D101"]
# TC off: these are all runtime pydantic models.
"src/python/beetkeeper/db/**/*.py" = ["TC"]
"src/beetsplug/**/*.py" = ["TID25"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
  "sqlmodel.SQLModel",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
known-first-party = ["beetkeeper", "beetsplug.beetkeeper_plugin"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests".msg = "Use httpx instead."

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true


# TODO: confirm `[tool.pytest]` (vs `[tool.pytest.ini_options]`) is valid on pytest 9.x:
# https://docs.pytest.org/en/latest/reference/customize.html#pyproject-toml
[tool.pytest]
minversion = "9.1"
addopts = [
  "--force-short-summary",
  "--tb=line",
  "-p",
  "no:cacheprovider",
  "--disable-socket",
  "--allow-hosts=testclient",
]
strict_markers = true
markers = [
  "releasetest: mark test as a release-only test which should be skipped on non-release builds.",
  "slow: mark test as a slow test which should be skipped by default in non-CI builds unless `--slowtests` is provided.",
  "no_autouse_mock_lifespan_singleton_inst: mark a test to not use the auto-use fixture for the fastapi lifespan singleton.",
  "override_global_httpx_mock: mark a test to override the configured httpx global fixture in favor of its own.",
]
filterwarnings = ["error:pytest.PytestWarning.*"]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
exclude = ["build_scripts/", "docs/"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["diskcache.*"]
ignore_missing_imports = true

# beets ships no py.typed marker.
[[tool.mypy.overrides]]
module = ["beets.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
  ".github",
  "build_scripts",
  "docs",
  "src/beetsplug/plugin_tests",
  "src/python/tests",
  "src/integration_tests",
  ".venv",
]
