# Build-only pyproject for `src/beetsplug:plugin-whl`: with `generate_setup=False`, setuptools reads this
# file directly, so the `[project]` metadata below is hand-maintained and must stay in sync with the app's.
[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "beetkeeper-plugin"
dynamic = ["version"]
requires-python = ">=3.14,<3.16"
dependencies = ["beets>=2.11.0", "requests>=2.34"]
authors = [{ name = "Zach Gottesman" }]
maintainers = [{ name = "zach-overflow" }]
keywords = [
  "beets",
  "beets plugin",
  "music tagging",
  "music-library",
  "music tags",
  "self-hosted",
]
license = "AGPL-3.0-or-later"
description = "A peripheral beets plugin component for event tracking in the beetkeeper application."
readme = "README.md"

[project.urls]
Documentation = "https://github.com/zach-overflow/beetkeeper/README.md"
Repository = "https://github.com/zach-overflow/beetkeeper"
"Bug Tracker" = "https://github.com/zach-overflow/beetkeeper/issues"
Changelog = "https://github.com/zach-overflow/beetkeeper/releases"

# The version comes from the git tag: Pants' `vcs_version` target (beetkeeper_plugin/BUILD) generates
# `_scm_version.py` via setuptools-scm, and `_version.py` re-exports it (falling back to a dev placeholder
# for builds outside Pants, e.g. the uv dev venv, where the generated module doesn't exist).
[tool.setuptools.dynamic]
version = { attr = "beetkeeper_plugin._version.__version__" }

[tool.setuptools.packages.find]
# `plugin_tests*` excluded explicitly so the test tree can never leak into the distribution.
include = ["beetkeeper_plugin*"]
exclude = ["plugin_tests*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# No `[tool.mypy]` here: Pants runs one mypy against the repo-root config, so it'd be silently ignored.

[tool.uv]
package = true
