# Build-only pyproject for `src/beetsplug:plugin-whl`: with `generate_setup=False`, setuptools reads this
# file directly, so the `[project]` metadata below is hand-maintained and must stay in sync with the app's.
[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "beetkeeper-plugin"
dynamic = ["version"]
requires-python = ">=3.14,<3.16"
dependencies = ["beets>=2.12", "requests>=2.34"]
authors = [{ name = "Zach Gottesman" }]
maintainers = [{ name = "zach-overflow" }]
keywords = [
  "beets",
  "beets plugin",
  "music tagging",
  "music-library",
  "music tags",
  "self-hosted",
]
license = "AGPL-3.0-or-later"
description = "A peripheral beets plugin component for event tracking in the beetkeeper application."
readme = "README.md"

[project.urls]
Documentation = "https://github.com/zach-overflow/beetkeeper/README.md"
Repository = "https://github.com/zach-overflow/beetkeeper"
"Bug Tracker" = "https://github.com/zach-overflow/beetkeeper/issues"
Changelog = "https://github.com/zach-overflow/beetkeeper/releases"

# The version comes from the git tag: Pants' `vcs_version` target (beetkeeper_plugin/BUILD) generates
# `_scm_version.py` via setuptools-scm, and `_version.py` re-exports it (falling back to a dev placeholder
# for builds outside Pants, e.g. the uv dev venv, where the generated module doesn't exist).
[tool.setuptools.dynamic]
version = { attr = "beetsplug.beetkeeper_plugin._version.__version__" }

# beets only discovers plugins importable as `beetsplug.<name>`, so the wheel must install the sources
# under the `beetsplug` namespace: the explicit package-dir mapping below places the local
# `beetkeeper_plugin/` dir at `beetsplug/beetkeeper_plugin/` in the wheel. `beetsplug` itself is NOT a
# declared package (no `beetsplug/__init__.py` shipped): beets' own `beetsplug/__init__.py` pkgutil
# `extend_path` merges this portion into the namespace, and shipping our own `__init__.py` would collide
# with the file beets installs.
[tool.setuptools]
packages = ["beetsplug.beetkeeper_plugin"]

[tool.setuptools.package-dir]
"beetsplug.beetkeeper_plugin" = "beetkeeper_plugin"

[tool.setuptools.package-data]
"*" = ["py.typed"]

# No `[tool.mypy]` here: Pants runs one mypy against the repo-root config, so it'd be silently ignored.

[tool.uv]
package = true
