# Build-only pyproject for the `python_distribution` at `src/python:beetkeeper-whl`.
#
# This file (not the repo-root pyproject.toml) is what setuptools' PEP 517 backend reads when
# building the wheel, because `generate_setup=False` makes Pants run the backend from the source
# root (`src/python`), where this file lands after source-root stripping. Keeping it here is what
# lets `[tool.setuptools.dynamic]` resolve the version from `beetkeeper/_version.py`.
#
# NOTE: because `generate_setup=False` disables Pants' dependency inference for the distribution,
# the build-relevant `[project]` metadata below is maintained here by hand and must be kept in
# sync with the repo-root pyproject.toml.
[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "beetkeeper"
authors = [{ name = "Zach Gottesman" }]
maintainers = [{ name = "zach-overflow" }]
keywords = [
  "beets",
  "beets server",
  "music tagging",
  "music-library",
  "music tags",
  "self-hosted",
]
license = "AGPL-3.0-or-later"
description = "Self-hosted webserver for interactive Beets music library administration."
dynamic = [
  "version",
] # Resolved from `beetkeeper._version.__version__` (see [tool.setuptools.dynamic]).
requires-python = ">=3.14,<3.15"
dependencies = [
  "aiosqlite>=0.21",
  "alembic>=1.16",
  "beets>=2.11.0",
  "click==8.4.1",
  # Plain fastapi (not `[all]`) + the one extra we actually use (form parsing). The `[all]` extra dragged in
  # fastapi-cli/fastapi-cloud-cli (sentry-sdk, typer, rich), uvicorn[standard], httpx, orjson/ujson, etc. —
  # none of which the self-hosted server needs (jinja2 for templates comes via jinja2-fragments).
  "fastapi==0.138.0",
  "python-multipart>=0.0.20",
  "greenlet>=3.1",
  "jinja2-fragments==1.12.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyYAML==6.0.3",
  "sqlalchemy",
  "starlette",
  "sqlmodel==0.0.38",
  "uvicorn==0.49.0",
]

[project.urls]
Documentation = "https://github.com/zach-overflow/beetkeeper/README.md"
Repository = "https://github.com/zach-overflow/beetkeeper"
"Bug Tracker" = "https://github.com/zach-overflow/beetkeeper/issues"
Changelog = "https://github.com/zach-overflow/beetkeeper/releases"

[project.scripts]
beetkeeper = "beetkeeper.main:cli"

[tool.setuptools.dynamic]
version = { attr = "beetkeeper._version.__version__" }

[tool.setuptools.packages.find]
include = ["beetkeeper*"]

[tool.setuptools.package-data]
beetkeeper = ["py.typed"]
# Non-`.py` alembic files (the `.py` env/versions modules are included automatically as package modules).
"beetkeeper.db" = ["alembic.ini"]
"beetkeeper.db.alembic" = ["script.py.mako"]

[tool.uv]
# https://docs.astral.sh/uv/reference/settings/#package
package = true
