# Build-only pyproject for `src/python:beetkeeper-whl`: with `generate_setup=False`, setuptools reads this
# file directly (source root, so `[tool.setuptools.dynamic]` finds `_version.py`) and Pants does no
# dependency inference — the `[project]` deps below are hand-maintained and must match what the code imports.
[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "beetkeeper"
authors = [{ name = "Zach Gottesman" }]
maintainers = [{ name = "zach-overflow" }]
keywords = [
  "beets",
  "beets server",
  "music tagging",
  "music-library",
  "music tags",
  "self-hosted",
]
license = "AGPL-3.0-or-later"
description = "Self-hosted webserver for interactive Beets music library administration."
dynamic = ["version"]
requires-python = ">=3.14,<3.15"
dependencies = [
  "anyio==4.14",
  "aiosqlite>=0.21",
  "alembic>=1.16",
  "beets>=2.11.0",
  "click==8.4.1",
  # Plain fastapi (not `[all]`, which drags in cli/uvicorn[standard]/httpx/etc. the server doesn't need);
  # `python-multipart` is the one extra we use (form parsing).
  "fastapi==0.138.0",
  "python-multipart>=0.0.20",
  "greenlet>=3.1",
  "jinja2-fragments==1.12.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyYAML==6.0.3",
  "sqlalchemy",
  "starlette",
  "sqlmodel==0.0.38",
  "uvicorn==0.49.0",
]

[project.urls]
Documentation = "https://github.com/zach-overflow/beetkeeper/README.md"
Repository = "https://github.com/zach-overflow/beetkeeper"
"Bug Tracker" = "https://github.com/zach-overflow/beetkeeper/issues"
Changelog = "https://github.com/zach-overflow/beetkeeper/releases"

[project.scripts]
beetkeeper = "beetkeeper.main:cli"

[tool.setuptools.dynamic]
version = { attr = "beetkeeper._version.__version__" }

[tool.setuptools.packages.find]
include = ["beetkeeper*"]

[tool.setuptools.package-data]
beetkeeper = ["py.typed"]
# `script.py.mako` omitted: only needed to author new revisions, `db upgrade` works without it.
"beetkeeper.db" = ["alembic.ini"]

# No `[tool.mypy]` here: Pants runs one mypy against the repo-root config, so it'd be silently ignored.

[tool.uv]
package = true
