# Build-only pyproject for `src/python:beetkeeper-whl`: with `generate_setup=False`, setuptools reads this
# file directly and Pants does no dependency inference — the `[project]` deps below are hand-maintained and
# must match what the code imports.
[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "beetkeeper"
dynamic = ["version"]
requires-python = ">=3.14,<3.16"
dependencies = [
  "anyio>=4.14.2",
  "aiosqlite>=0.21",
  "alembic>=1.16",
  "beets>=2.11.0",
  "beetkeeper-plugin",
  "click>=8.4.1",
  "fastapi>=0.138.0",
  "python-multipart>=0.0.20",
  "greenlet>=3.1",
  "httpx>=0.28.1",
  "jinja2-fragments>=1.12.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "PyYAML>=6.0.3",
  "sqlalchemy",
  "starlette",
  "sqlmodel>=0.0.38",
  "uvicorn>=0.49.0",
]
authors = [{ name = "Zach Gottesman" }]
maintainers = [{ name = "zach-overflow" }]
keywords = [
  "beets",
  "beets server",
  "music tagging",
  "music-library",
  "music tags",
  "self-hosted",
]
license = "AGPL-3.0-or-later"
description = "Self-hosted webserver for interactive Beets music library administration."
readme = "README.md"

[project.urls]
Documentation = "https://github.com/zach-overflow/beetkeeper/README.md"
Repository = "https://github.com/zach-overflow/beetkeeper"
"Bug Tracker" = "https://github.com/zach-overflow/beetkeeper/issues"
Changelog = "https://github.com/zach-overflow/beetkeeper/releases"

[project.scripts]
beetkeeper = "beetkeeper.main:cli"

# The version comes from the git tag: Pants' `vcs_version` target (src/python/beetkeeper/BUILD) generates
# `_scm_version.py` via setuptools-scm, and `_version.py` re-exports it (falling back to a dev placeholder
# for builds outside Pants, e.g. the uv dev venv, where the generated module doesn't exist).
[tool.setuptools.dynamic]
version = { attr = "beetkeeper._version.__version__" }

[tool.setuptools.packages.find]
include = ["beetkeeper*"]

[tool.setuptools.package-data]
# Static assets live in non-package subdirs (no __init__.py), so patterns must be recursive + path-qualified
# under the top `beetkeeper` package — bare `*.css` only matches files directly in `beetkeeper/`.
beetkeeper = [
  "py.typed",
  "api/static/**/*.css",
  "api/static/**/*.html",
  "api/static/**/*.js",
  "api/static/**/*.ico",
  "api/static/**/*.png",
  "api/static/**/*.svg",
]
# `script.py.mako` omitted: only needed to author new revisions, `db upgrade` works without it.
"beetkeeper.db" = ["alembic.ini"]

# No `[tool.mypy]` here: Pants runs one mypy against the repo-root config, so it'd be silently ignored.
[tool.uv]
package = true
